--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multiparty": "^4.2.2",
     "mysql": "^2.18.1"
   }
 }
